codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_accepts_data_url_image_blocks.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• 已调用 image.generate({"prompt":"tiny image"})
  └ 已返回图像
