codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_image_after_text_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• 已调用 image.generate({"prompt":"tiny image"})
  └ Here is the image:
    已返回图像
