codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_narrow_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ 无法显示此内容
  对于某些网络安全请求，我们会格外
  谨慎。如果你正在从事获授权的安全
  工作，可以申请 Daybreak 以获得更
  广泛的访问权限。
  了解更多: https://
  help.openai.com/en/
  articles/20001326
  申请 Daybreak: https://
  openai.com/form/enterprise-
  trusted-access-for-cyber/
