codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_verbose_inventory.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/mcp

🔌  MCP 工具

  • plugin_docs: 未知（1 个工具）
    • 身份验证：不支持
    • 工具：lookup
    • 资源：Docs (file:///docs)
    • 资源模板：Doc Template (file:///docs/{id})
